src/style.css
/* ... */
.fixed-buttons {
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  display: flex;
  flex-direction: row;
}

.show-control-bar-button {
  width: 2.5rem;
}
.segments {
  display: flex;
  justify-content: center;
  flex-direction: row;
  gap: 2rem;
}
label {
  display: flex;
  justify-content: center;
  text-transform: uppercase;
  font-size: 0.5rem;
  font-family: sans-serif;
  margin-top: -8px;
}

@media (max-width: 800px) {
  .page__content {
    margin-top: 35px;
  }
  .now-playing-container {
    width: 95%;
  }
  .player-controls {
    margin-top: 1rem;
  }
  #target,
  .control-content {
    flex-direction: column;
  }
  .album-modal .dialog {
    width: 90%;
  }
  .album-image {
    background-position: top !important;
  }
}

@media (max-width: 450px) {
  .grid-size {
    display: none;
  }
  .global-controls,
  .player-bar {
    justify-content: center;
  }
  .global-controls {
    margin-bottom: 2.5rem;
    flex-direction: column;
    align-items: center;
  }
  .now-playing-album-cover {
    width: 6rem;
  }
  .now-playing-meta {
    width: auto;
    margin-right: 1rem;
  }
  .control-bar {
    padding: 0;
  }
  .control-content {
    width: 100%;
    margin-right: 0;
  }
  .alpha-shuffle {
    justify-content: space-around;
  }
  .search-bar {
    justify-content: center;
    align-self: center;
  }

  .album-grid-0 .album-text-info,
  .album-grid-1 .album-text-info {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }

  .album-grid-2 .album-text-info {
    font-size: 1rem;
    line-height: 1.25rem;
  }

  .album-grid-3 .album-text-info,
  .album-grid-4 .album-text-info,
  .album-grid-5 .album-text-info {
    font-size: .4rem;
    line-height: .5rem;
  }
  .album-grid-6 .album-text-info,
  .album-grid-7 .album-text-info,
  .album-grid-8 .album-text-info,
  .album-grid-9 .album-text-info {
    font-size: .25rem;
    line-height: .4rem;
  }
}

